fix: update basePath

--- a/src/content/zh/legal/privacy.mdx
+++ b/src/content/zh/legal/privacy.mdx
@@ -25,7 +25,7 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 
 * **关联方** 是指控制一方、受一方控制或与一方共同控制的实体，其中“控制”是指拥有 50% 或以上有权投票选举一方的股份、股权或其他证券。 董事或其他管理机构。
 
-* **公司**（在本协议中称为“公司”、“我们”、“我们”或“我们的”）是指 水印助手。
+* **公司**（在本协议中称为“公司”、“我们”、“我们”或“我们的”）是指 PicGuard。
 
 * **Cookie** 是网站放置在您的计算机、移动设备或任何其他设备上的小文件，其中包含您在该网站上的浏览历史记录以及其多种用途的详细信息。
 
@@ -43,7 +43,7 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 
 * **使用数据** 是指自动收集的数据，通过使用服务或服务基础设施本身生成（例如，页面访问的持续时间）。
 
-* **网站**指的是水印助手，可从[https://kjxbyz.com/watermark-assistant](https://kjxbyz.com/watermark-assistant)访问
+* **网站**指的是PicGuard，可从[https://kjxbyz.com/picguard](https://kjxbyz.com/picguard)访问
 
 * **您** 指访问或使用服务的个人，或代表该个人访问或使用服务的公司或其他法律实体（如果适用）。
 
