--- a/src/content/zh/legal/terms-of-use.mdx
+++ b/src/content/zh/legal/terms-of-use.mdx
@@ -7,28 +7,28 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 
 欢迎来到信鸽！
 
-这些条款和条件概述了信鸽网站的使用规则和规定，该网站位于 [https://kjxbyz.com/watermark-assistant](https://kjxbyz.com/watermark-assistant)。
+这些条款和条件概述了信鸽网站的使用规则和规定，该网站位于 [https://kjxbyz.com/picguard](https://kjxbyz.com/picguard)。
 
-通过访问本网站，我们假设您接受这些条款和条件。 如果您不同意接受本页所述的所有条款和条件，请勿继续使用 水印助手。
+通过访问本网站，我们假设您接受这些条款和条件。 如果您不同意接受本页所述的所有条款和条件，请勿继续使用 PicGuard。
 
 以下术语适用于这些条款和条件、隐私声明和免责声明以及所有协议：“客户”、“您”和“您的”是指您、登录本网站并遵守公司条款和条件的人。 “公司”、“我们自己”、“我们”、“我们的”和“我们的”均指我们公司。 “一方”、“各方”或“我们”指的是客户和我们自己。 所有条款均指为了满足客户在提供公司规定服务方面的需求而以最适当的方式向客户提供协助所需的要约、接受和考虑的付款，符合 并遵守我们的现行法律。 上述术语或其他单词的单数、复数、大写和/或他/她或他们的任何使用均被视为可互换，因此指的是相同的。
 
 # Cookies
 
-我们使用 cookie。 通过访问 水印助手，您同意使用 cookie 并遵守 水印助手 的隐私政策。
+我们使用 cookie。 通过访问 PicGuard，您同意使用 cookie 并遵守 PicGuard 的隐私政策。
 
 大多数交互式网站都使用 cookie 来让我们检索用户每次访问的详细信息。 我们的网站使用 Cookie 来启用某些区域的功能，以便人们更轻松地访问我们的网站。 我们的一些附属公司/广告合作伙伴也可能使用 cookie。
 
 # License
 
-除非另有说明，水印助手 和/或其许可方拥有 水印助手 上所有材料的知识产权。 保留所有知识产权。 您可以从 水印助手 访问此信息供您个人使用，但须遵守这些条款和条件中规定的限制。
+除非另有说明，PicGuard 和/或其许可方拥有 PicGuard 上所有材料的知识产权。 保留所有知识产权。 您可以从 PicGuard 访问此信息供您个人使用，但须遵守这些条款和条件中规定的限制。
 
 你不能：
 
 * 重新发布来自信鸽的材料
-* 出售、出租或分许可 水印助手 的材料
+* 出售、出租或分许可 PicGuard 的材料
 * 复制、复制或复印来自信鸽的材料
-* 重新分发 水印助手 的内容
+* 重新分发 PicGuard 的内容
 
 本协议自本协议签署之日起开始生效。
 
@@ -43,7 +43,7 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 * 评论不包含任何诽谤、诽谤、冒犯、不雅或其他侵犯隐私的非法材料
 * 评论不会用于招揽或促进业务或定制或呈现商业活动或非法活动。
 
-您特此授予 水印助手 非排他性许可，以使用、复制、编辑并授权其他人以任何及所有形式、格式或媒体使用、复制和编辑您的任何评论。
+您特此授予 PicGuard 非排他性许可，以使用、复制、编辑并授权其他人以任何及所有形式、格式或媒体使用、复制和编辑您的任何评论。
 
 # 超链接到我们的内容
 
@@ -71,7 +71,7 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 
 这些组织可以链接到我们的主页，只要该链接： (a) 不具有任何欺骗性； (b) 不虚假暗示链接方及其产品或服务的赞助、认可或批准； (c) 适合链接方网站的上下文。
 
-如果您是上述第 2 段中列出的组织之一并且有兴趣链接到我们的网站，您必须通过向 水印助手 发送电子邮件通知我们。 请包含您的姓名、您的组织名称、联系信息以及您网站的 URL、您想要链接到我们网站的任何 URL 列表，以及您想要链接到我们网站的 URL 列表 关联。 等待 2-3 周才能得到回复。
+如果您是上述第 2 段中列出的组织之一并且有兴趣链接到我们的网站，您必须通过向 PicGuard 发送电子邮件通知我们。 请包含您的姓名、您的组织名称、联系信息以及您网站的 URL、您想要链接到我们网站的任何 URL 列表，以及您想要链接到我们网站的 URL 列表 关联。 等待 2-3 周才能得到回复。
 
 经批准的组织可以通过以下方式超链接到我们的网站：
 
@@ -79,7 +79,7 @@ authorImg: 'https://www.kjxbyz.com/portal/logo.jpg'
 * 通过使用链接到的统一资源定位器； 或者
 * 通过使用链接到的我们网站的任何其他描述，该描述在链接方网站内容的上下文和格式中有意义。
 
-如果没有商标许可协议，则不得使用 水印助手 的徽标或其他艺术品进行链接。
+如果没有商标许可协议，则不得使用 PicGuard 的徽标或其他艺术品进行链接。
 
 # iFrame
 
