--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -1,11 +1,14 @@
 {
   "homePage": {
     "title": "PicGuard",
+    "imageDescription": "请上传图片",
     "description": "本app不会上传任何图片到服务器, 所有操作均在本地完成",
     "textLabel": "文本",
     "textLabelDescription": "文本会以水印添加到图片上",
+    "textValidator": "请输入文本.",
     "textInput": "此证件仅用于办理xx业务, 其他用途无效",
     "colorLabel": "颜色",
+    "colorValidator": "请选择颜色.",
     "transparencyLabel": "透明度",
     "preview": "预览",
     "save": "保存"
