fix: update slogan

--- a/docs/i18n/locales/en/common.json
+++ b/docs/i18n/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+  "slogan": "Your pictures, your signature.",
   "latest": "Latest Version",
   "table-of-contents": "Table of contents",
   "load-more": "Load More"
