feat: add ui components

--- a/docs/i18n/locales/en/common.json
+++ b/docs/i18n/locales/en/common.json
@@ -2,5 +2,6 @@
   "slogan": "Your pictures, your signature.",
   "latest": "Latest Version",
   "table-of-contents": "Table of contents",
-  "load-more": "Load More"
+  "load-more": "Load More",
+  "more-version": "More versions"
 }
