--- a/docs/i18n/locales/zh/common.json
+++ b/docs/i18n/locales/zh/common.json
@@ -2,5 +2,6 @@
   "slogan": "给图片添加水印, 防止被恶意使用.",
   "latest": "最新版本",
   "table-of-contents": "目录",
-  "load-more": "加载更多"
+  "load-more": "加载更多",
+  "more-version": "更多版本"
 }
