refactor: remove ui components

--- a/docs/i18n/locales/en/common.json
+++ b/docs/i18n/locales/en/common.json
@@ -3,5 +3,5 @@
   "latest": "Latest Version",
   "table-of-contents": "Table of contents",
   "load-more": "Load More",
-  "more-version": "More versions"
+  "more-versions": "More versions"
 }
