--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -34,15 +34,13 @@
       "licenseDialogContentPrivacyAgreement": "Privacy Agreement",
       "licenseDialogContentSuffix": ", start using our services after you agree and accept all terms.",
       "iosPermissions": [
-        "1. For you to take photos, PicGuard needs access to your Camera. (NSCameraUsageDescription)",
-        "2. For you to upload pictures, PicGuard needs access to your Photos. (NSPhotoLibraryUsageDescription)"
+        "For you to upload pictures, PicGuard needs access to your Photos. (NSPhotoLibraryUsageDescription)"
       ],
       "androidPermissions": [
-        "1. In order to use the Firebase Analytics Service, PicGuard needs access to your Internet. (android.permission.INTERNET)",
-        "2. For you to upload pictures, PicGuard needs access to your Storage. (android.permission.READ_EXTERNAL_STORAGE)",
-        "3. For you to save pictures, PicGuard needs access to your Storage. (android.permission.WRITE_EXTERNAL_STORAGE)",
-        "4. For you to upload pictures, PicGuard needs access to your Photos. (android.permission.READ_MEDIA_IMAGES)",
-        "5. For you to take photos, PicGuard needs access to your Camera. (android.permission.CAMERA)"
+        "In order to use the Firebase Analytics Service, PicGuard needs access to your Internet. (android.permission.INTERNET)",
+        "For you to upload pictures, PicGuard needs access to your Storage. (android.permission.READ_EXTERNAL_STORAGE)",
+        "For you to save pictures, PicGuard needs access to your Storage. (android.permission.WRITE_EXTERNAL_STORAGE)",
+        "For you to upload pictures, PicGuard needs access to your Photos. (android.permission.READ_MEDIA_IMAGES)"
       ]
     }
   },
