refactor: update home page

--- a/docs/i18n/locales/en/common.json
+++ b/docs/i18n/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "slogan": "Your pictures, your signature.",
+  "beta": "Beta",
+  "store": "Store",
   "latest": "Latest Version",
   "table-of-contents": "Table of contents",
   "load-more": "Load More",
