--- a/docs/i18n/locales/zh/common.json
+++ b/docs/i18n/locales/zh/common.json
@@ -1,5 +1,7 @@
 {
   "slogan": "给图片添加水印, 防止被恶意使用.",
+  "beta": "测试版",
+  "store": "应用商店",
   "latest": "最新版本",
   "table-of-contents": "目录",
   "load-more": "加载更多",
