--- a/docs/i18n/locales/zh/header.json
+++ b/docs/i18n/locales/zh/header.json
@@ -3,7 +3,8 @@
   "menus": {
     "system": "跟随系统",
     "dark": "黑暗模式",
-    "light": "白天模式"
+    "light": "白天模式",
+    "goto-picguard": "打开PicGuard"
   },
   "languages": {
     "zh": "中文",
