--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -17,7 +17,9 @@
   },
   "buttons": {
     "agree": "同意",
-    "cancel": "再想想"
+    "cancel": "再想想",
+    "ignore": "忽略",
+    "turnOn": "打开"
   },
   "dialogs": {
     "exitConfirm": {
@@ -26,11 +28,21 @@
       "title": "关闭确认",
       "description": "您确定要关闭此窗口吗?"
     },
+    "permissions": {
+      "photos": {
+        "title": "允许访问您的相册",
+        "description": "请前往您的手机设置，授予 PicGuard 访问您相册的权限."
+      },
+      "storage": {
+        "title": "允许访问您的存储",
+        "description": "请前往您的手机设置，授予 PicGuard 访问您存储的权限."
+      }
+    },
     "licenseDialog": {
       "licenseDialogTitle": "隐私条款",
       "licenseDialogContentContent": "PicGuard非常重视你的隐私保护和个人信息保护.",
       "licenseDialogContentTip": "以下是该APP所需的权限列表:",
-      "licenseDialogContentPrefix": "在使用APP服务前，请认真阅读 ",
+      "licenseDialogContentPrefix": "在使用APP服务前, 请认真阅读 ",
       "licenseDialogContentUserAgreement": "《隐私政策》",
       "licenseDialogContentAnd": "和",
       "licenseDialogContentPrivacyAgreement": "《用户服务协议》",
