--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -10,6 +10,10 @@
     "colorLabel": "Color",
     "colorValidator": "Please select a color.",
     "transparencyLabel": "Transparency",
+    "textGapLabel": "Text spacing",
+    "textGapDescription": "The spacing between text in each line of text",
+    "rowGapLabel": "Line spacing",
+    "rowGapDescription": "The spacing between each line of text",
     "preview": "Preview",
     "save": "Save",
     "savedSuccess": "Saved successfully",
