--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -10,6 +10,10 @@
     "colorLabel": "颜色",
     "colorValidator": "请选择颜色.",
     "transparencyLabel": "透明度",
+    "textGapLabel": "文本间距",
+    "textGapDescription": "每行文本中, 文本与文本之间的间距",
+    "rowGapLabel": "行间距",
+    "rowGapDescription": "每行文本与每行文本之间的间距",
     "preview": "预览",
     "save": "保存",
     "savedSuccess": "保存成功",
