Added language switch in settings

--- a/lib/i18n/strings.i18n.json
+++ b/lib/i18n/strings.i18n.json
@@ -24,7 +24,8 @@
     "save": "Save",
     "savedSuccess": "Saved successfully",
     "savedFailure": "Failed to save image(s)",
-    "settings": "Settings"
+    "settings": "Settings",
+    "languages": "Languages"
   },
   "buttons": {
     "agree": "Agree",
