--- a/lib/i18n/strings_zh.i18n.json
+++ b/lib/i18n/strings_zh.i18n.json
@@ -60,13 +60,13 @@
       "licenseDialogContentPrivacyAgreement": "《用户服务协议》",
       "licenseDialogContentSuffix": ", 你同意并接受全部条款后开始使用我们的服务.",
       "iosPermissions": [
-        "为了让您上传图片, $appName需要访问您的照片. (NSPhotoLibraryUsageDescription)"
+        "为了给您的图像添加水印, $appName需要访问您的照片. (NSPhotoLibraryUsageDescription)"
       ],
       "androidPermissions": [
         "为了使用 Sentry 服务, $appName需要访问您的互联网. (android.permission.INTERNET)",
-        "为了让您上传图片, $appName需要访问您的存储. (android.permission.READ_EXTERNAL_STORAGE)",
+        "为了给您的图像添加水印, $appName需要访问您的存储. (android.permission.READ_EXTERNAL_STORAGE)",
         "为了让您保存图片, $appName需要访问您的存储. (android.permission.WRITE_EXTERNAL_STORAGE)",
-        "为了让您上传图片, $appName需要访问您的照片. (android.permission.READ_MEDIA_IMAGES)"
+        "为了给您的图像添加水印, $appName需要访问您的照片. (android.permission.READ_MEDIA_IMAGES)"
       ]
     }
   },
