--- a/lib/i18n/strings_it.i18n.json
+++ b/lib/i18n/strings_it.i18n.json
@@ -24,6 +24,7 @@
     "save": "Salva",
     "savedSuccess": "Salvataggio riuscito",
     "savedFailure": "Impossibile salvare l'immagine(i)",
+    "saveInfo": "Sono state salvate $succeedNum l'immagine(i) e non è stato possibile salvare $failedNum l'immagine(i).",
     "settings": "Impostazioni",
     "languages": "Lingue"
   },
@@ -72,7 +73,7 @@
   },
   "locales(map)": {
     "en": "English",
-    "it": "Italiano",
+    "it": "Italian",
     "zh": "中文"
   },
   "themes": {
