Add feedback support

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -26,7 +26,8 @@
     "savedFailure": "Failed to save image(s)",
     "saveInfo": "$succeedNum image(s) saved, $failedNum image(s) failed to save",
     "settings": "Settings",
-    "languages": "Languages"
+    "languages": "Languages",
+    "feedback": "Feedback"
   },
   "buttons": {
     "agree": "Agree",
