--- a/lib/i18n/zh.i18n.json
+++ b/lib/i18n/zh.i18n.json
@@ -26,7 +26,8 @@
     "savedFailure": "保存失败",
     "saveInfo": "已保存$succeedNum张, 保存失败$failedNum张",
     "settings": "设置",
-    "languages": "语言"
+    "languages": "语言",
+    "feedback": "反馈"
   },
   "buttons": {
     "agree": "同意",
