Revert "Add feedback support"
This reverts commit 5b1e1ab0ad3432ab8aafb786ce0ea352ae7e52c8.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -26,8 +26,7 @@
     "savedFailure": "Failed to save image(s)",
     "saveInfo": "$succeedNum image(s) saved, $failedNum image(s) failed to save",
     "settings": "Settings",
-    "languages": "Languages",
-    "feedback": "Feedback"
+    "languages": "Languages"
   },
   "buttons": {
     "agree": "Agree",
