--- a/lib/i18n/it.i18n.json
+++ b/lib/i18n/it.i18n.json
@@ -26,8 +26,7 @@
     "savedFailure": "Impossibile salvare l'immagine(i)",
     "saveInfo": "Sono state salvate $succeedNum l'immagine(i) e non è stato possibile salvare $failedNum l'immagine(i).",
     "settings": "Impostazioni",
-    "languages": "Lingue",
-    "feedback": "Feedback"
+    "languages": "Lingue"
   },
   "buttons": {
     "agree": "Accetto",
