--- a/assets/i18n/it.i18n.json
+++ b/assets/i18n/it.i18n.json
@@ -14,10 +14,11 @@
     "colorValidator": "Seleziona un colore.",
     "opacityLabel": "Opacità",
     "fontLabel": "Font",
+    "fontLabelDescription": "Some languages do not support custom fonts",
     "fontValidator": "Seleziona un font.",
     "fontSizeLabel": "Dimensione del font",
     "textGapLabel": "Spaziatura del testo",
-    "textGapDescription": "La spaziatura tra il testo in ogni riga di testo",
+    "textGapDescription": "Alcune lingue non supportano i font personalizzati",
     "rowGapLabel": "Interlinea",
     "rowGapDescription": "La spaziatura tra ogni riga di testo",
     "preview": "Anteprima",
