--- a/macos/Runner/zh.lproj/MainMenu.strings
+++ b/macos/Runner/zh.lproj/MainMenu.strings
@@ -21,13 +21,13 @@
 "4J7-dP-txa.title" = "Enter Full Screen";
 
 /* Class = "NSMenuItem"; title = "Quit APP_NAME"; ObjectID = "4sb-4s-VLi"; */
-"4sb-4s-VLi.title" = "Quit APP_NAME";
+"4sb-4s-VLi.title" = "退出 APP_NAME";
 
 /* Class = "NSMenuItem"; title = "Edit"; ObjectID = "5QF-Oa-p0T"; */
 "5QF-Oa-p0T.title" = "Edit";
 
 /* Class = "NSMenuItem"; title = "About APP_NAME"; ObjectID = "5kV-Vb-QxS"; */
-"5kV-Vb-QxS.title" = "About APP_NAME";
+"5kV-Vb-QxS.title" = "关于 APP_NAME";
 
 /* Class = "NSMenuItem"; title = "Redo"; ObjectID = "6dh-zS-Vam"; */
 "6dh-zS-Vam.title" = "Redo";
