--- a/assets/i18n/zh.i18n.json
+++ b/assets/i18n/zh.i18n.json
@@ -29,6 +29,12 @@
     "settings": "设置",
     "languages": "语言"
   },
+  "menus": {
+    "help": "帮助",
+    "support": "支持",
+    "userAgreement": "用户协议",
+    "privacy": "隐私政策"
+  },
   "buttons": {
     "agree": "同意",
     "cancel": "再想想",
@@ -57,9 +63,9 @@
       "licenseDialogContentContent": "$appName非常重视你的隐私保护和个人信息保护.",
       "licenseDialogContentTip": "以下是该APP所需的权限列表:",
       "licenseDialogContentPrefix": "在使用APP服务前, 请认真阅读 ",
-      "licenseDialogContentUserAgreement": "《隐私政策》",
+      "licenseDialogContentUserAgreement": "《用户服务协议》",
       "licenseDialogContentAnd": "和",
-      "licenseDialogContentPrivacyAgreement": "《用户服务协议》",
+      "licenseDialogContentPrivacyPolicy": "《隐私政策》",
       "licenseDialogContentSuffix": ", 你同意并接受全部条款后开始使用我们的服务.",
       "iosPermissions": [
         "为了给您的图像添加水印, $appName需要访问您的照片. (NSPhotoLibraryUsageDescription)"
